--- a/page1.html
+++ b/page1.html
@@ -206,44 +206,44 @@
             <span class="next" onclick="next()"> ▷ </span>
         </div>
 
-
+    <div class = "slider">
         <div class="img-gallery">
-            <img src="zhongli.png" onclick="openFullImg(this.src)">
-            <img src="img1.jpg" onclick="openFullImg(this.src)">
-            <img src="img2.png" onclick="openFullImg(this.src)">
-            <img src="img3.png" onclick="openFullImg(this.src)">
-            <img src="reneee.png" onclick="openFullImg(this.src)">
-            <img src="img4.png" onclick="openFullImg(this.src)">
-            <img src="img5.png" onclick="openFullImg(this.src)">
-            <img src="img6.png" onclick="openFullImg(this.src)">
-            <img src="img7.png" onclick="openFullImg(this.src)">
-            <img src="img8.png" onclick="openFullImg(this.src)">
-            <img src="img9.png" onclick="openFullImg(this.src)">
-            <img src="img14.png" onclick="openFullImg(this.src)">
-            <img src="AKI.png" onclick="openFullImg(this.src)">
-            <img src="img13.png" onclick="openFullImg(this.src)">
-            <img src="img15.png" onclick="openFullImg(this.src)">
-            <img src="img16.png" onclick="openFullImg(this.src)">
-            <img src="img17.png" onclick="openFullImg(this.src)">
-            <img src="colls.png" onclick="openFullImg(this.src)">
-            <img src="img18.png" onclick="openFullImg(this.src)">
-            <img src="img19.png" onclick="openFullImg(this.src)">
-            <img src="img21.png" onclick="openFullImg(this.src)">
-            <img src="img22.png" onclick="openFullImg(this.src)">
-            <img src="img23.png" onclick="openFullImg(this.src)">
-            <img src="img24.png" onclick="openFullImg(this.src)">
-            <img src="img25.png" onclick="openFullImg(this.src)">
-            <img src="img26.jpg" onclick="openFullImg(this.src)">
-            <img src="img27.png" onclick="openFullImg(this.src)">
-            <img src="img28.png" onclick="openFullImg(this.src)">
-            <img src="img29.png" onclick="openFullImg(this.src)">
-            <img src="img30.png" onclick="openFullImg(this.src)">
-            <img src="img31.png" onclick="openFullImg(this.src)">
-            <img src="scara.png" onclick="openFullImg(this.src)">
-            <img src="img11.png" onclick="openFullImg(this.src)">
-            <img src="img12.png" onclick="openFullImg(this.src)">
+            <img src="zhongli.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img1.jpg" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img2.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img3.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="reneee.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img4.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img5.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img6.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img7.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img8.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img9.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img14.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="AKI.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img13.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img15.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img16.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img17.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="colls.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img18.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img19.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img21.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img22.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img23.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img24.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img25.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img26.jpg" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img27.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img28.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img29.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img30.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img31.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="scara.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img11.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="img12.png" onclick="openFullImg(this.src)" class="slider-img">
         </div>
-
+    </div>
 
         <section class="wrapper">
 
@@ -262,6 +262,15 @@
 
             function closeFullImg() {
                 fullImgBox.style.display = "none";
+            }
+
+
+            var slider_img = document.querySelector('.slider-img');
+            var images = 
+
+
+            function prev() {
+
             }
         </script>
 
