--- a/page1.html
+++ b/page1.html
@@ -284,26 +284,22 @@
             // Initially set the first image
             updateFullImg();
 
-            document.onkeydown = checkKey;
+            node.addEventListener('keydown', function(event) {
+            const key = event.key;
 
-            function checkKey(e) {
-
-                e = e || window.event;
-
-                if (e.keyCode == '38') {
-                    // up arrow
-                }
-                else if (e.keyCode == '40') {
-                    // down arrow
-                }
-                else if (e.keyCode == '37') {
-                // left arrow
-                }
-                else if (e.keyCode == '39') {
-                // right arrow
-                }
+            switch (event.key) {
+                case "ArrowLeft":
+                    prev();
+                    break;
+                case "ArrowRight":
+                    next();
+                    break;
 
             }
+
+            });
+
+
         </script>
 
 
