--- a/page1.html
+++ b/page1.html
@@ -269,6 +269,7 @@
             function closeFullImg() {
                 currentIndex = 0;
                 fullImgBox.style.display = "none";
+                updateFullImg();
             }
 
             function prev() {
