--- a/page1.html
+++ b/page1.html
@@ -262,7 +262,7 @@
             var images = ['zhongli.png', 'img1.jpg', "img2.png", "img3.png", "reneee.png", "img4.png", "img5.png", "img6.png", "img7.png", "img8.png", "img9.png", "img14.png", "AKI.png", "img13.png", "img15.png", "img16.png", "img17.png", "colls.png", "img18.png", "img19.png", "img21.png", "img22.png", "img23.png", "img24.png", "img25.png", "img26.jpg", "img27.png", "img28.png", "img29.png", "img30.png", "img31.png", "scara.png", "img11.png", "img12.png"];
             var currentIndex = 0;
 
-            function openFullImg(pic) {
+            function openFullImg(pic, index) {
                 fullImgBox.style.display = "flex";
                 fullImg.src = pic;
             }
